fix scrollbar on landing/login

--- a/cookinghs/src/components/Login/LoginMain/styles.css
+++ b/cookinghs/src/components/Login/LoginMain/styles.css
@@ -48,5 +48,5 @@
     background-image: url("background.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: calc(100vh - 64px);
+    height: calc(100vh - 57px);
 }
